# lioncub-fsw

./: .codespell-ignore-words.txt  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cpplint.cfg  custom_space_data_link.py  fprime-gds.yaml  fprime-gds.yml  prj.conf  pull_request_template.md  requirements.txt  settings.ini  west-commands.yml  west.yml
.github/: pull_request_template.md
.github/codeql/: security.yaml
.github/workflows/: ci.yaml
FprimeZephyrReference/: CMakeLists.txt
FprimeZephyrReference/ComCcsdsUart/: CMakeLists.txt  ComCcsds.fpp
FprimeZephyrReference/ComCcsdsUart/docs/: sdd.md
FprimeZephyrReference/Components/: CMakeLists.txt
FprimeZephyrReference/Components/BootloaderTrigger/: BootloaderTrigger.cpp  BootloaderTrigger.fpp  BootloaderTrigger.hpp  CMakeLists.txt
FprimeZephyrReference/Components/Burnwire/: Burnwire.cpp  Burnwire.fpp  Burnwire.hpp  CMakeLists.txt
FprimeZephyrReference/Components/ComDelay/: CMakeLists.txt  ComDelay.cpp  ComDelay.fpp  ComDelay.hpp
FprimeZephyrReference/Components/Drv/: CMakeLists.txt
FprimeZephyrReference/ReferenceDeployment/: CMakeLists.txt  Main.cpp  README.md
FprimeZephyrReference/Types/: CMakeLists.txt  LightSensorTypes.fpp
FprimeZephyrReference/test/: bootloader_trigger.py
FprimeZephyrReference/test/int/: README.md  (+7 more)
boards/: proves_fc_v5c.overlay  rpi_pico2_rp2350a_m33.overlay
circuit-python-lora-passthrough/: boot.py  code.py
docs/additional-resources/: board-list.md  self-hosted-runner-setup.md  specifying-board-configuration.md  troubleshooting.md  wsl-notes.md
docs/main-content/: build-flash-run.md  initial-setup.md
docs/uploading/: teensy.md
lib/makelib/: build-tools.mk  ci.mk  zephyr.mk
lib/west-commands/: uv.py
(+89 files in other folders)
